# python-git-training

./: .gitignore  README.md  pyproject.toml
src/: fibonacci.py
tests/: test_basic_fibonacci.py  test_list_fibonacci.py  test_negative_fibonacci.py  test_negative_recursive_fibonacci.py  test_none_fibonacci.py  test_recursive_fibonacci.py
