[project]
name = "python-git-training"
version = "0.1.0"
description = "Python kata for resolving merge conflicts in Git."
authors = [
    {name = "Becky Carter"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.4"

[tool.black]
line-length=90

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

